style.css
/* css reset */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
    vertical-align: baseline;
    box-sizing: border-box;
    font-family: 'Sen', 'Roboto', sans-serif;
    color: #282828;
}

a {
    text-decoration: none;
    color: inherit;
}

/* experimenting with css variables */
:root {
    --main-color: #f1f2f6;
  }

.content {
    background-color: var(--main-color);
}

/* mobile first gallery page, for desktop version look down :D */

/* header */

.app-header {
    height: 100px;
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 18px 5%;
    background: none;
}

.app-header__logo {
    font-weight: 400;
    color: white;
    letter-spacing: 1.2px;
    font-size: 1.3rem;
}

.app-header__social-container {
    position: absolute;
    left: 18px;
    top: 92vh;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.app-header__social-container > a {
    height: 32px;
    width: 32px;
    margin: 0 4px;
    border-radius: 8px;
    border: 1px solid #ffffff;
    display: flex;
    justify-content: center;
    align-items: center;
}

.social-icon {
    width: 16px;
}

.app-header__about {
    display: none;
}

.about-page {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    margin-top: 60px;
    background-color: var(--main-color);
    color: #f7f1e3;
    z-index: 3;
    display: none;
}

.about-page.show-about {
    display: flex;
}

.close-popup {
    display: none;
}

.app-header__burger-wrapper {
    display: none;
    width: 28px;
    height: 28px;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.app-header__burger {
    width: 100%;
    height: 2px;
    position: relative;
    background-color: #404040;
    border-radius: 2px;
    transition: all 500ms ease-in-out;
}

.app-header__burger::before,
.app-header__burger::after {
    content: '';
    position: absolute;
    width: 100%;
    height: 2px;
    border-radius: 2px;
    background-color: #404040;
}

.app-header__burger::before {
    transform: translateY(-8px);
}

.app-header__burger::after {
    transform: translateY(8px);
}

/* burger animation */

.app-header__burger-wrapper.open .app-header__burger {
    background: transparent;
}

.app-header__burger-wrapper.open .app-header__burger::before {
    transform: rotate(45deg);
}

.app-header__burger-wrapper.open .app-header__burger::after {
    transform: rotate(-45deg);
}

.drop-down-menu {
    width: 100vw;
    height: 300px;
    background-color: gold;
    margin-top: -300px;
    transition: all 500ms ease-in-out;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    font-size: 2rem;
    font-weight: 700;
    color: #353535;
    padding: 10%;
}

.drop-down-menu.down {
    margin-top: 0;
    transition: all 500ms ease-in-out;
}

.image-container__image {
    width: 100%;
    height: auto;
    cursor: pointer;
}

.image-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.desc-wrapper {
    padding: 0 6px;
    width: 100%;
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.img-title {
    position: relative;
    top: -30px;
    font-size: .9rem;
    font-weight: 200;
    text-transform: lowercase;
    color: white;
}

.loader {
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #f1f2f6;
    z-index: 4;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    font-weight: 500;
    visibility: visible;
    transition: all 500ms ease-in-out;
}

.loader-bar {
    position: relative;
    width: 160px;
    height: 160px;
    border-radius: 50%;
    background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0 );
    margin-top: 10px;
    animation: loaderAnim 2800ms linear;
}

.loader-bar span {
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background: linear-gradient(#14ffe9, #ffeb3b, #ff9ff3);
    animation: loaderAnim 1000ms linear;
}

.loader-bar span:nth-child(1) {
    filter: blur(10px);
}

.loader-bar span:nth-child(2) {
    filter: blur(20px);
}

.loader-bar span:nth-child(3) {
    filter: blur(30px);
}

.loader-bar::after {
    content: '';
    position: absolute;
    top: 10px;
    left: 10px;
    bottom: 10px;
    right: 10px;
    background: #f1f2f6;
    border-radius: 50%;    
    box-shadow: inset 4px 4px 6px #aab6c3, inset -4px -4px 6px #e6f6ff;
}

@keyframes loaderAnim {
    to {transform: rotate(360deg);}
}

.loader.hidden {
    visibility: hidden;
    transition: all 500ms ease-in-out;
    display: none;
}

footer {
    width: 100%;
    height: 10vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    background-color: black;
}

.social {
    width: 15px;
    margin:  0 20px;
}

.social-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.social:hover {
    filter: blur(1px);
    cursor: pointer;
}

.copyright {
    font-size: .8rem;
    margin: 10px 0;
    color: white;
}

.hero-image-container {
    height: 100vh;
    background: url(./assets/heroImage.jpg) no-repeat center center fixed;
    background-size: cover;
    margin-bottom: 15px;
}

.hero-image-title {
    display: none;
}

/*********************** DESKTOP VERSION ***********************/

@media screen and (min-width: 768px) {
    .content {
        display: flex;
        flex-direction: column;
        overflow-x: hidden;
    }

    .drop-down-menu, .app-header__burger-wrapper/*, .desc-wrapper*/ {
        display: none;
    }

    .app-header {
        height: 60px;
        position: absolute;
        top: 0;
        left: 0;
        display: block;
        padding: 30px;
        margin: 0;
        z-index: 2;
    }

    .hero-image-container {
        height: 100vh;
        overflow: hidden;
        background: url(./assets/heroImage.jpg) no-repeat center center;
        background-size: cover;
    }

    .hero-image-title {
        display: inline-block;
        position: absolute;
        top: 90vmin;
        right: 30px;
        color: white;
        font-weight: 400;
        letter-spacing: .5px;
        transform: translateY(80%)
    }

    .about-page {
        position: fixed;
        top: 0;
        left: 0;
        width: 100vw;
        height: 100vh;
        padding: 10% 4%;
        z-index: 3;
        display: flex;
        flex-direction: column;
        opacity: 0;
        transform: translateX(100%);
        transition: all 800ms ease;
        background-color: rgba(205, 205, 205, 0.1);
        backdrop-filter: blur(5px);
        color: white;
    }
    
    .about-page.show-about {
        display: flex;
        flex-direction: column;
        opacity: 1;
        transform: translateX(0);
        transition: all 1000ms ease-in;
    }

    .title {
        max-width: 50vw;
        font-size: 3rem;
        font-weight: 100;
        margin-bottom: 4px;
    }

    .text {
        max-width: 50vw;
        font-size: 1rem;
        letter-spacing: .1rem;
        line-height: 1.8;
    }
    
    .app-header__logo {
        color: white;
        background-color: rgba(200, 200, 200, .1);
        backdrop-filter: blur(2px);
        padding: 0 2px;
        font-size: 20px;
        letter-spacing: 2px;
    }
    
    .app-header__about {
        display: flex;
        margin-top: 10px;
        color: white;
        cursor: pointer;
    }

    .header-copyright {
        display: block;
        position: relative;
        bottom: 0;
        font-size: .7rem;
    }

    .header-copyright:hover, .app-header__about:hover {
        color: #f53b57;
    }
    

    .header-copyright > a {
        font-weight: 900;
    }

    .app-header__social-container {
        position: absolute;
        left: 30px;
        top: 90vmin;
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .app-header__social-container > a {
        height: 30px;
        width: 30px;
        margin: 0 4px;
        border-radius: 8px;
        border: 1px solid #ffffff;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .app-header__social-container > a:active {
        background: #f1f2f6;
        box-shadow: inset 6px 6px 12px #cdced1, 
            inset -6px -6px 12px #ffffff;
    }

    .card-wrapper {
        display: flex;
        margin-top: 10px;
        padding: 0;
        justify-content: center;
    }

    .col {
        width: 33%;
        height: 100%;
        padding: 0 4px;
    }

    .image-container__image {
        width: 100%;
        height: auto;
    }

    .desc-wrapper {
        height: 10px;
        margin: 0;
        padding: 0;
        opacity: 0;
        transition: all 1s ease-in-out;
    }
    
    .image-container:hover+.desc-wrapper {
        opacity: 1;
        transition: all 1s ease-in-out;
    }

    .img-title {
        position: relative;
        left: 0;
        top: -25px;
        margin-left: 10px;
        font-weight: 400;
        font-size: .9rem;
        letter-spacing: 1px;
        color: white;
    }

    .popup-image {
        width: 100vw;
        height: 100vh;
        position: fixed;
        top: 0;
        left: 0;
        z-index: 10;
        display: flex;
        justify-content: center;
        align-items: center;
        display: none;
        transition: all 1s ease-in-out;
        background: rgba(200, 200, 200, .5);
        backdrop-filter: blur(5px);
    }

    .popup-image-container > img {
        max-height: 90vh;
        width: auto;
    }

    .close-popup {
        position: fixed;
        top: 5vh;
        right: 5vh;
        cursor: pointer;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .close-popup > span {
        color:black;
        font-weight: 200;
        margin-right: 10px;
    }

    footer {
        height: 200px;
        display: flex;
        justify-content: center;
    }

    .copyright {
        font-size: .8rem;
        margin: 10px 0;
        margin-top: 15px;
    }

    .copyright > a {
        text-decoration: underline;
    }
}

